--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.7.0
   firebase_auth: ^5.3.2
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
